--- a/docstrings/numerical_simulation/estimation_setup/observation.yaml
+++ b/docstrings/numerical_simulation/estimation_setup/observation.yaml
@@ -829,6 +829,40 @@ functions:
 
   #######################################################################
 
+  - name: relative_angular_position # [py]
+    short_summary: "Factory function for creating settings for a relative angular position observable."
+    extended_summary: |
+      Factory function for creating observation model settings of relative angular position type observables (as relative right ascension :math:`\Delta\alpha` and relative declination :math:`\Delta\delta`), 
+      for a single link definition. The associated observation model creates an observable that is the difference of two :func:`~tudatpy.numerical_simulation.estimation_setup.observation.angular_position`
+      observables :math:`\left(\mathbf{h}_{_{\text{ang.pos.}}}\right)_{2}` and :math:`\mathbf{h}_{_{\text{ang.pos.}}}\right)_{1}`. 
+      The resulting observable becomes :math:`\left(\mathbf{h}_{_{\text{ang.pos.}}}\right)_{2}-\left(\mathbf{h}_{_{\text{ang.pos.}}}\right)_{2}`
+     
+    parameters:
+      - name: link_ends # [py]
+        type: LinkDefinition # [py]
+        description: |
+          Set of link ends that define the geometry of the observation. This observable requires the
+          `transmitter`, 'transmitter2` and `receiver` :class:`~tudatpy.numerical_simulation.estimation_setup.observation.LinkEndType` entries to be defined.
+          The `transmitter` and `transmitter2` entries are used to define separate angular position observables (as observed by the `receiver`), from
+          which the observable is then computed
+
+      - name: light_time_correction_settings # [py]
+        type: List[ :class:`LightTimeCorrectionSettings` ], default = list() # [py]
+        description: |
+          List of corrections for the light-time that are to be used. Default is none, which will result
+          in the signal being modelled as moving in a straight line with the speed of light
+
+      - name: bias_settings # [py]
+        type: :class:`ObservationBiasSettings`, default = None # [py]
+        description: |
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)
+
+    returns:
+        type: :class:`ObservationSettings`  # [py]
+        description: Instance of the :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservationModelSettings` class
+          defining the settings for the angular position observable.
+  #######################################################################
+
   - name: one_way_doppler_instantaneous # [py]
     short_summary: "Factory function for creating settings for a one-way instantaneous Doppler observable."
     extended_summary: |
