--- a/docstrings/numerical_simulation/estimation.yaml
+++ b/docstrings/numerical_simulation/estimation.yaml
@@ -160,22 +160,62 @@ classes:
   ##############################################################################
 
   - name: ObservationCollection
-    short_summary: "Class collecting all products of the observation simulation."
+    short_summary: "Class collecting all observations and associated data for use in an estimation."
     extended_summary: |
-      Class containing all products of the observation simulation.
-      This class is instantiated via a call to the :func:`~tudatpy.numerical_simulation.estimation.simulate_observations` function.
+      Class containing the full set of observations and associated data, typically for input into the estimation. When using simulated data,
+      this class is instantiated via a call to the :func:`~tudatpy.numerical_simulation.estimation.simulate_observations` function. More information is provided
+      on the user guide TODO
 
     properties: # [py]
 
       - name: concatenated_times # [py]
         type: numpy.ndarray[numpy.float64[m, 1]] # [py]
-        description: Vector containing concatenated observation times. Concatenation takes place over the observation times of all observables. # [py]
+        description: Vector containing concatenated observation times. See user guide for details on storage order (TODO) # [py]
         readonly: True # [py]
 
       - name: concatenated_observations # [py]
         type: numpy.ndarray[numpy.float64[m, 1]] # [py]
-        description: Vector containing concatenated observation times. Concatenation takes place over the observations of all observables. # [py]
+        description: Vector containing concatenated observable values. See user guide for details on storage order (TODO) # [py]
         readonly: True # [py]
+
+      - name: concatenated_link_definition_ids # [py]
+        type: numpy.ndarray[ int ] # [py]
+        description: Vector containing concatenated indices identifying the link ends. Each set of link ends is assigned a unique 
+          integer identifier (for a given instance of this class). The definition of a given integer identifier with the link ends is given by
+          this class' :func:`link_definition_ids` function. See user guide for details on storage order of the present vector (TODO) # [py]
+        readonly: True # [py]	
+
+      - name: link_definition_ids # [py]
+        type: dict[ int, dict[ LinkEndType, LinkEndId ] ] # [py]
+        description: Dictionaty mapping a link end integer identifier to the specific link ends # [py]
+        readonly: True # [py]	
+
+      - name: observable_type_start_index_and_size # [py]
+        type: dict[ ObservableType, [ int, int ] ] # [py]
+        description: Dictionary defining per obervable type (dict key), the index in the full observation vector (:func:`concatenated_observations`) where the given observable
+          type starts, and the number of subsequent entries in this vector containing a value of an observable of this type   # [py]
+        readonly: True # [py]	
+	
+      - name: observation_set_start_index_and_size # [py]
+        type: dict[ ObservableType, dict[ int, list[ int, int ] ] ] # [py]
+        description: The nested dictionary/list
+          returned by this property mirrors the structure of the :func:`sorted_observation_sets` property of this class. The present function provides the start index and size of
+          the observables in the full observation vector that come from the correspoding `SingleObservationSet` in the :func:`sorted_observation_sets` 
+          Consequently, the present property returns a nested dictionary defining per obervable type, link end identifier, and `SingleObservationSet` index 
+          (for the given observable type and link end identifier),
+          where the observables in the given `SingleObservationSet` starts, and the number of subsequent entries in this vector containing data from it.   # [py]
+        readonly: True # [py]	
+
+      - name: sorted_observation_sets # [py]
+        type: dict[ ObservableType, dict[ int, list[ SingleObservationSet ] ] ] # [py]
+        description: The nested dictionary/list contains the list of `SingleObservationSet` objects, in the same method as they are stored internally in the present
+          class. Specifics on the storage order are given in the user guide (TODO)  # [py]
+        readonly: True # [py]	
+
+  ##############################################################################
+
+  - name: SingleObservationSet
+    short_summary: "Class collecting a single sett of observations and associated data, of a given observable type, link ends, and ancilliary data.."
 
 
   ################# VARIATIONAL EQUATIONS ######################################
